--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ edition = "2021"
 pnet = "0.33.0"
 libc = "0.2.140"
 etherparse = "0.13.0"
+rayon = "1.7.0"
 tokio = { version = "1", features = ["full"] }
