--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ path = "src/main.rs"
 pnet = "0.33.0"
 libc = "0.2.140"
 etherparse = "0.12.0"
-rayon = "1.7.0"
 tokio = { version = "1", features = ["full"] }
 termion = "2.0.1"
 notify-rust = "4.8.0"
+futures = "0.3.28"
